--- a/public/assets/css/ownerOperators.css
+++ b/public/assets/css/ownerOperators.css
@@ -1,36 +1,14 @@
 /* HEADER IMAGE W/ TEXT */
 .jumbotron {
   color: white;
-  background-image: url('../images/savportbackground.jpg');
+  background-image: url('../images/portpic.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   opacity: 0.7;
+  overflow: auto;
 }
-
-/*****VIDEO BACKGROUND JUMBOTRON*******/
-/* .jumbotron {
-  position: relative;
-  overflow: hidden;
-  background-color:black;
-}
-.jumbotron video {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  width:100%;
-  height:100%;
-  /*  object-fit is not supported on IE  */
-/* object-fit: cover;
-  opacity:0.5;
-}
-.jumbotron .container {
-  z-index: 2;
-  position: relative;
-} */
-
-/*****VIDEO BACKGROUND JUMBOTRON*******/
 
 nav {
   margin-top: 0;
@@ -47,7 +25,7 @@ nav {
 
 #heading1 {
   text-align: left;
-  margin-top: 200px;
+  margin-top: 25px;
   font-size: 32pt;
 }
 
@@ -81,6 +59,10 @@ nav {
   margin-top: 50px;
 }
 
+#ownerOperator-description {
+  text-align: center;
+}
+
 .card {
   border: none;
 }
@@ -97,4 +79,5 @@ nav {
 
 footer {
   height: 150px;
+  width: 100%;
 }
