--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,40 +1,21 @@
 /* HEADER IMAGE W/ TEXT */
 .jumbotron {
   color: white;
-  background-image: url('../images/sslpicsav.png');
+  background-image: url('../images/portpic.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   opacity: 0.7;
+  overflow: auto;
 }
 
-/*****VIDEO BACKGROUND JUMBOTRON*******/
-/* .jumbotron {
-  position: relative;
-  overflow: hidden;
-  background-color:black;
-}
-.jumbotron video {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  width:100%;
-  height:100%;
-  /*  object-fit is not supported on IE  */
-/* object-fit: cover;
-  opacity:0.5;
-}
-.jumbotron .container {
-  z-index: 2;
-  position: relative;
+/* .navbar-collapse {
+  background-color: blue;
+  position: fixed;
+  width: 100%;
+  margin-top: 0% !important;
 } */
-
-/*****VIDEO BACKGROUND JUMBOTRON*******/
-
-nav {
-  margin-top: 0;
-}
 
 .nav-item {
   margin-right: 0;
@@ -47,8 +28,8 @@ nav {
 
 #heading1 {
   text-align: left;
-  margin-top: 200px;
-  font-size: 32pt;
+  margin-top: 25px;
+  font-size: 24pt;
 }
 
 .display {
